@@ -20,6 +20,7 @@
 	* Fixed bug #35727: Configurable query parameter feature causes bug with the suggestion link
 	* Added feature #34652: Add option search.faceting.keepAllFacetsOnSelection, credits Cornel Boppart
 	* Changed EXT:news Index Queue configuration to index tags into separate field, using keywords field for keywords
+	* Changed SOLR_RELATION to resolve labels for relations correctly even with intermediate tables, credits Steffen Ritter
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
